# PhyMeT

./: .gitignore  CLAUDE.md  MemISTD_Dataloader.py  MemISTD_Evaluate_SmallTarget 1.py  MemISTD_Evaluate_SmallTarget 2.py  MemISTD_Evaluate_SmallTarget.py  MemISTD_README.md  MemISTD_Trainer_SmallTarget.py  MemISTD_Trainer_SmallTarget_1.py  MemISTD_Trainer_SmallTarget_2.py  MemISTD_Utils_Fit.py  pyproject.toml  requirements.txt  run_train_4gpu 1.sh  run_train_4gpu.sh  train_dist.py  train_dist_1.py  train_dist_2.py
.claude/: auto_commit_hook.py  settings.json
config/: memistd_itsdt_config.yaml  memistd_nudt_config.yaml  memistd_small_target_config 1.yaml  memistd_small_target_config_v2.yaml
model_2/: __init__.py  losses.py  memistd_small_target.py  tiny_target_modules.py  yolox_loss_optimized.py
utils/: callbacks.py  check_dataset.py  create_mini_dataset.py  diagnose_map_zero.py  eval_utils.py  false_positive_diagnosis.py  memory_visualization.py  utils.py  utils_map.py
