[project]
name = "tdcnet-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "prefetch-generator>=1.0.3",
    "pycocotools==2.0.8",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "tqdm==4.65.2",
]
